--- a/Syntax_Kotlin/Mini_Project_Android/app/src/main/res/values/colors.xml
+++ b/Syntax_Kotlin/Mini_Project_Android/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#fdfdfd</color>
     <color name="checkbox">#fafafa</color>
-    <color name="background">#303030</color>
+    <color name="background">#505050</color>
+    <color name="text_color_primary">#ddfcfcfc</color>
+    <color name="background_material_light">#828282</color>
 </resources>
