--- a/Syntax_Kotlin/Mini_Project_Android/app/src/main/res/values/styles.xml
+++ b/Syntax_Kotlin/Mini_Project_Android/app/src/main/res/values/styles.xml
@@ -7,6 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="textInputStyle">@style/Widget.Design.TextInputLayout</item>
+        <item name="android:textColorPrimary">@color/text_color_primary</item>
+        <item name="android:colorBackground">@color/background_material_light</item>
     </style>
 
 </resources>
