--- a/Syntax_Kotlin/Mini_Project_Android/app/src/main/res/layout/activity_main_menu.xml
+++ b/Syntax_Kotlin/Mini_Project_Android/app/src/main/res/layout/activity_main_menu.xml
@@ -15,7 +15,6 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:clickable="true"
-        android:onClick="goToCreateList"
         app:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,11 +37,10 @@
 
     <TextView
         android:id="@+id/tview_display_username_ID"
-        android:layout_width="129dp"
-        android:layout_height="22dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Username"
         android:textColor="@color/colorAccent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -54,7 +52,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="56dp"
-        android:onClick="goToLists"
+        android:onClick="goToEditList"
         android:text="edit lists"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
